src/objects/Work_Order_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Comment_Body__c</fullName>
        <label>Comment Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Clarification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Work Order Comments</relationshipLabel>
        <relationshipName>Work_Order_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Order Comment</label>
    <nameField>
        <label>Work Order Comments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>